--- a/src/Components/Watch/Watch.css
+++ b/src/Components/Watch/Watch.css
@@ -10,7 +10,7 @@
 }
 
 .simularMovie {
-  width: 15%;
+  width: 19%;
 }
 
 .movie-name {
@@ -27,4 +27,79 @@
 .movie-release_date {
   color: #fff;
   margin: 20px 0;
+}
+
+.watch-tv-container {
+  display: flex;
+  margin-top: 30px;
+  justify-content: space-between;
+}
+
+.watch-tv {
+  width: 75%;
+}
+
+.watch-tv-other-season {
+  width: 22%;
+  height: 600px;
+  overflow-y: auto;
+}
+
+.watch-tv-link {
+  display: flex;
+  align-items: center;
+  height: 150px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.watch-tv-season-img {
+  height: 100%;
+  width: 50%;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+.info-esp-season {
+  width: 50%;
+  background-color: #fff;
+  height: 100%;
+  padding: 10px 5px;
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.esp-list {
+  background-color: #fff;
+  border-radius: 8px;
+  overflow: hidden;
+  display: block;
+  height: 80px;
+  margin-bottom: 10px;
+  width: 100%;
+  color: #333;
+}
+
+.esp-list.active {
+  background-color: #e67e22;
+  color: #fff;
+}
+
+.esp-item {
+  display: flex;
+  height: 100%;
+}
+
+.esp-item-img {
+  width: 50%;
+  height: 100%;
+}
+
+.esp-item-name {
+  height: 100%;
+  padding: 5px;
+  width: 50%;
 }
