--- a/src/Components/Trailer/Trailer.css
+++ b/src/Components/Trailer/Trailer.css
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.623);
   z-index: 1000;
   justify-content: center;
+  max-width: 100vw;
 }
 
 .trailer-container::-webkit-scrollbar {
@@ -14,10 +15,10 @@
 }
 
 .trailer-container {
-  max-width: 90%;
+  max-width: 100%;
   background-color: #636e72;
   overflow-y: auto;
-  width: 500px;
+  width: 450px;
   padding: 0 20px;
 }
 
@@ -33,4 +34,11 @@
   font-weight: 300;
   color: #fff;
   margin: 10px 0;
+}
+
+iframe {
+  height: 315px;
+  width: 100%;
+  margin: 0 auto;
+  max-width: calc(100% - 32px);
 }
