--- a/src/Components/Trailer/Trailer.css
+++ b/src/Components/Trailer/Trailer.css
@@ -35,3 +35,9 @@
   color: #fff;
   margin: 10px 0;
 }
+
+.trailer-title-close {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
